# kirk

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
benches/: bench.rs
crossbeam/: fn.scope.html  fn.spawn_unsafe.html  struct.Scope.html  struct.ScopedJoinHandle.html
crossbeam/mem/: struct.CachePadded.html  trait.ZerosValid.html
crossbeam/mem/epoch/: fn.pin.html  index.html  struct.Atomic.html  struct.Guard.html  struct.Owned.html  struct.Shared.html
crossbeam/sync/: index.html  struct.AtomicOption.html  struct.MsQueue.html  struct.SegQueue.html  struct.TreiberStack.html
crossbeam/sync/chase_lev/: enum.Steal.html  fn.deque.html  index.html  struct.Stealer.html  struct.Worker.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js  trait.Drop.js
implementors/kirk/: trait.Job.js
kirk/: index.html  sidebar-items.js  struct.Pool.html  struct.Task.html  trait.Job.html
kirk/crew/: index.html  sidebar-items.js  trait.Crew.html  trait.Parameters.html  trait.Worker.html
kirk/crew/channel/: index.html  sidebar-items.js  struct.Channel.html  struct.ChannelWorker.html  (+1 more)
src/: lib.rs
src/crew/: channel.rs  deque.rs  mod.rs
src/crossbeam/: lib.rs.html  scoped.rs.html
src/kirk/: lib.rs.html
test/: lib.rs
tests/: lib.rs
(+17 files in other folders)
