[package]
name = "kirk"
version = "0.0.1"
authors = ["Samuel Fredrickson <kinghajj@gmail.com>"]
description = "A scoped task pool using `crossbeam`."

[dependencies]
log = "~0.3.5"
num_cpus = "~0.2.10"

[dependencies.crossbeam]
git = "https://github.com/kinghajj/crossbeam.git"
branch = "relax-deque-sync-requirements"

[dev-dependencies]
env_logger = "~0.3.2"

[features]
nightly = []
